Bug_fix[7863 ui issues on ie11] (#920)

--- a/packages/ringcentral-widgets/components/ContactDisplay/styles.scss
+++ b/packages/ringcentral-widgets/components/ContactDisplay/styles.scss
@@ -20,8 +20,8 @@
   .button {
     margin: 0px;
     font-size: 14px;
-    height: unset;
-    line-height: unset;
+    height: auto;
+    line-height: initial;
     display: flex;
     align-items: center;
   }
